<resources>
    <string name="app_name">KinkLink</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBSCzFepAPHkUyfpECX13Xl0IR63xWGGjk</string>
   <string name="facebook_app_id">286559268712659</string>
   <string name="alert_api_fail">Something went wrong, please check after some time.</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="inactive_user">User is inactive from admin</string>
    <string name="enable_gps">Please Turn On Your Location</string>
    <string name="alertImageException">The file is corrupt &amp; cannot be opened.</string>
    <string name="alertOutOfMemory">This device doesn\'t have enough space , free up storage space</string>
    <string name="email_id">Email Address</string>
    <string name="password"> Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rem_me"> Remember me</string>
    <string name="forgot_pass"> Forgot Password?</string>
    <string name="login"> Login</string>
    <string name="or"> OR</string>
    <string name="connect_facebook"> Connect With Facebook</string>
    <string name="dont_have_acc"> Don\'t have an account ?</string>
    <string name="sign_up"> Sign up</string>
    <string name="login_email_null">Please enter Email Address</string>
    <string name="login_email_wrong">Invalid Email Address or Password</string>
    <string name="login_email_invalid">Please enter valid Email Address</string>
    <string name="login_password_null">Please enter your Password</string>
    <string name="login_password_min_length">Password must be at least 8 character long</string>
    <string name="login_password_max_length">Invalid Password</string>
    <string name="login_password_wrong">Invalid Email Address or Password</string>
    <string name="real_people"> Real People. Real Feelings.\nReal Dating.</string>
    <string name="you_are_a">Who are you</string>
    <string name="looking_for">Looking for</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="couple">Couple</string>
    <string name="trans_male">Transgender Male</string>
    <string name="trans_female">Transgender Female</string>
    <string name="done">Done</string>
    <string name="btn_continue">Continue</string>
    <string name="you_are_a_null">Please select Who are you</string>
    <string name="lookin_for_null">Please select Looking for</string>
    <string name="email_sent_msg">We did sent a link on your registered email to verify email address, please check.</string>
    <string name="legal_message">I agree to receive emails from KinkLink.com relating to my account, and services, updates and promotions from KinkLink.com, its affiliates and subsidiaries. I acknowledge that I can withdraw my consent at any time. Contact us for more details.
KinkLink.com can be contacted at info@kinklink.com</string>
    <string name="i_agree">I Agree</string>
    <string name="i_agree_terms">I agree, terms and conditions</string>
    <string name="i_agree_null">Please select terms and conditions</string>
    <string name="create_your_account">Create your account</string>
    <string name="upload_your_photos">Upload your pictures</string>
    <string name="question_answer">Answer questions to\ncalculate your best matches</string>
    <string name="basic_info">Basic Info</string>
    <string name="other_info">Other Info</string>
    <string name="profile_picture">Profile Pictures</string>
    <string name="questions">Questions</string>
    <string name="step_two">2</string>
    <string name="step_three">3</string>
    <string name="step_four">4</string>
    <string name="btn_next">Next</string>
    <string name="about_me">About Me</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="reg_email">Email Address</string>
    <string name="already_acc">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="acc_name_null">Please enter Name</string>
    <string name="acc_name_invalid">Name allow alphabets and space only</string>
    <string name="acc_name_len_1">Name should be at least 2 character long</string>
    <string name="acc_dob_null">Please select Birth date</string>
    <string name="acc_email_null">Please enter Email Address</string>
    <string name="acc_email_invalid">Please enter valid Email Address</string>
    <string name="acc_email_already_exist">Email Address already exist</string>
    <string name="acc_pass_null">Please enter Password</string>
    <string name="acc_pass_invalid">Password should be at least 8 characters long</string>
    <string name="acc_pass_exceed_max_len">Password cannot exceed 20 character</string>
    <string name="acc_pass_wrong">Invalid Password</string>
    <string name="acc_con_pass_null">Please enter Confirm Password</string>
    <string name="acc_con_pass_not_match">Passwords do not match</string>
    <string name="acc_interest_null">Please select at least one kink</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="profile_image_null">Please upload at least one picture</string>
    <string name="profile_image_upload_success">Picture uploaded successfully</string>
    <string name="profile_image_delete_success">Picture removed successfully</string>
    <string name="profile_image_delete_single">You should have at least one picture</string>
    <string name="profile_not_fit_size">Picture does not fit into the allowed dimension</string>
    <string name="image_text_heading">UPLOAD A PHOTO NOW, it\'s absolutely critical for success!</string>
    <string name="image_text">The chances of you getting replies to your messages if you haven\'t uploaded a photo are extremely low. Having a photo shows you are interested in meeting people and your profile will show up in searches, matching, etc. No one is going to reply to your messages if you don\'t have a photo and everyone else does so upload one now!</string>
    <string name="email_verification_inst">Please verify your email address to continue with the KinkLink.</string>
    <string name="btn_str">Already Verified</string>
    <string name="resend_str">Re-Send</string>
    <string name="denied_external_storage_permission">KinkLink does not have access to your camera and photos. Please grant permission to access it.</string>
    <string name="denied_camera_permission">KinkLink does not have access to your camera and photos. Please grant permission to access it.</string>
    <string name="reg_interests">Add Kinks</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="alert_no_network">No network connection</string>
    <string name="session_expire">Session expired, please login again</string>
    <string name="network_message">No internet connection found.\nPlease check your internet connection\nand try again.</string>
    <string name="try_again">Try Again</string>
    <string name="toast_no_network">Please check your Network Connection</string>
    <string name="alert_heading">Alert</string>
    <string name="alert_ok">OK</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="result_image_desc">crop result</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_info">Account Info</string>
    <string name="gender">Any Gender</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_save_continue">Save and Continue</string>
    <string name="discard_changes">Are you sure you want to discard the changes</string>
    <string name="add_interest">Add Kinks</string>
    <string name="select_interests">Select Kinks</string>
    <string name="interests">Kinks</string>
    <string name="select">Select</string>
    <string name="city_town">Home City/Town</string>
    <string name="current_location">Current\nLocation</string>
    <string name="intent">Looking for</string>
    <string name="looking_for_intent">Looking for</string>
    <string name="body_type"> Any Body-Type</string>
    <string name="ethnicity">Any Ethnicity</string>
    <string name="work">Work</string>
    <string name="enter_work">Please enter your Profession</string>
    <string name="education">Education</string>
    <string name="preferences">Preference</string>
    <string name="about">About</string>
    <string name="hint_about_yourself">About Your Self</string>
    <string name="please_select">Please select one option</string>
    <string name="select_preferences">Select Preference</string>
    <string name="preference_null">Please select your Preference</string>
    <string name="acc_city_null">Please select City/Town</string>
    <string name="acc_body_type_null">Please select Body-Type</string>
    <string name="acc_ethnicity_null">Please select Ethnicity</string>
    <string name="acc_work_null">Please enter Work</string>
    <string name="acc_education_null">Please select Education</string>
    <string name="acc_about_null">Please enter About Your Self</string>
    <string name="btn_back">Back</string>
    <string name="matches">Matches</string>
    <string name="meet_up">Discover</string>
    <string name="travel_kink">Travel</string>
    <string name="my_profile">My Profile</string>
    <string name="my_visits">Parameters I Set</string>
    <string name="settings">Settings</string>
    <string name="views">Views</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="match">Match</string>
    <string name="yr">Yr</string>
    <string name="miles">mi</string>
    <string name="search_user">Search User</string>
    <string name="no_match_found">No Match Found</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btn_reply">Reply</string>
    <string name="make_offer">Message Now!</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report">Report</string>
    <string name="enter_offer_price">Offer Amount</string>
    <string name="hopefully">Hopefully </string>
    <string name="make_offer_text"> wants to connect with you too! Make a date offer, or try your luck with just your good looks. Good luck!</string>
    <string name="free_love">Free Date</string>
    <string name="amount">Amount</string>
    <string name="i_will_pay">I\'ll Pay You</string>
    <string name="you_pay_me">You Pay Me</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_placeholder">Enter Title</string>
    <string name="decription_placeholder">Enter Description</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password_text">Use the form below to change your password. New passwords are required to be a minimum of 8 characters in length.</string>
    <string name="delete_ac_alret_str">You are about to permanenatly delete KinkLink and all its contents. You will not be able to recover this contents. This operation can not be undone.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_it">Reset it.</string>
    <string name="submit">Submit</string>
</resources>