<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/match_bg"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        app:srcCompat="@drawable/ic_signal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/alert_no_network"
        android:textColor="@color/field_text_color"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/network_message"
        android:textColor="@color/field_text_color"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/btn_try_again"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_login_btn"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/try_again"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

</LinearLayout>


