<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/philosopher_regular"
                    android:text="@string/change_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_19ssp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/dialog_decline_button"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_error" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/philosopher_regular"
                android:gravity="center"
                android:text="@string/change_password_text"
                android:textColor="@color/field_text_color"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ed_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"

                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/field_text_color"
                    android:textColorHint="@color/field_text_color"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/color_view1" />

                <EditText
                    android:id="@+id/ed_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/field_text_color"
                    android:textColorHint="@color/field_text_color"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/color_view1" />

                <EditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/confirm_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/field_text_color"
                    android:textColorHint="@color/field_text_color"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/color_view1" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_marginRight="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:text="@string/update_password"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />


            <LinearLayout
                android:id="@+id/ly_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/field_text_color"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:text="@string/reset_it"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>