<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_legal_success"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/philosopher_regular"
                    android:text="@string/delete_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp"
                    android:layout_marginTop="@dimen/_10sdp"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/alert_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/delete_ac_alret_str"
                android:textColor="@color/field_text_color"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"

                />


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    android:layout_gravity="center">

            <TextView
                android:id="@+id/btn_i_agree"
                android:layout_width="130dp"
                android:layout_height="@dimen/_35sdp"


                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:text="@string/alert_ok"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_toRightOf="@+id/btn_i_agree"
                android:id="@+id/btn_i_cancel"
                android:layout_width="130dp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:text="@string/btn_cancel"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:layout_marginLeft="20dp"/>

</RelativeLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>