<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/philosopher_regular"
                    android:text="@string/report"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/dialog_decline_button"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_error" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/ed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="start"
                    android:hint="@string/title_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:textColor="@color/field_text_color"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@color/color_view1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/ed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="start"
                    android:hint="@string/decription_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:maxLength="200"
                    android:textColor="@color/field_text_color"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@color/color_view1" />

            </LinearLayout>


            <TextView
                android:id="@+id/btn_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_marginRight="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>